--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1,63 +1,81 @@
-// # SHORT HOWTO
-// ## Sprites
-//     .whatever
-//          +sized-sprite($icons, coderiver) //or
-// 			+s(codedby) //gets default value for spritemap as $icons
-// ### animation example
-//     +include keyframes(rotate)
-//        from
-//           +rotate(0)
-//        to
-//           +rotate(360)
-// ## animation usage
-//     body:hover
-// 	    +animation(rotate 200s linear infinite)
-// ## animations easing, see easings.net for full list and examples, tnx @ai
-//     transition: all 1.2s ceaser($ease-in)
-// ## gradient example
-//     +background-image(linear-gradient(#232323, #5c5c5c));
-//     +g(#232323, #5c5c5c);
-//	   horizontal
-//     +gh(#232323, #5c5c5c);
-// ## making bw-images
-//     img
-//			@extend %gray
-// ## predefined media-queries: https://github.com/paranoida/sass-mediaqueries
-//     +min-screen(320)
-//			display: none
-// +max-screen(1000), +iphone5, +iphone4, +ipad-retina, +ipad, +hdpi - also available
-//
-// ## use cycles
-//     @for $i from 1 through 3
-//       .item-#{$i}
-//			width: 2em * $i;
-//     @each $s in a,b,c
-// 	    	#{$s}
-//				display: none
-// ## fonts 
-// Save fonts to /css/fonts, after that write (eot, woff, ttf):
-// +font(book, cytiapro-black-webfont)  
-// =book
-// 	font-family: "book", Arial, sans-serif 
-// insert pics into css
-// div
-// 	+pic("blabla.png")
-// span
-// 	+png(blabla)
-// p
-// 	+jpg(bla)
+// fonts 
++font(ProximaNova-Regular, ProximaNova-Regular)  
+=proximanova
+	font-family: "ProximaNova-Regular", Arial, sans-serif
+	font-style: normal
+	font-weight: normal
++font(MarkSimonsonProximaNovaSemibold, MarkSimonsonProximaNovaSemibold)  
+=semibold
+	font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif
+	font-style: normal
+	font-weight: normal
++font(MarkSimonsonProximaNovaLight, MarkSimonsonProximaNovaLight)  
+=light
+	font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif 
+	font-style: normal
+	font-weight: normal	
 
+// vars
+$dark: #222
+$orange: #f6ad44
 
 body
-	font-family: Arial, sans-serif 
-	font-size: 12px 
+	+proximanova
+	font-size: 17px 
 	line-height: 1.4
-
+	color: $dark
+	background: #eaeaea 
+// mixins
+=justify
+	text-align: justify
+	line-height: 0
+	font-size: 1px
+	text-justify: newspaper
+	zoom: 1
+	text-align-last: justify
+	&:after
+		content: ""
+		display: inline-block
+		width: 100%
+		height: 0px
+		visibility: hidden
+		overflow: hidden
+=justify-child
+	display: inline-block
+	line-height: normal
+	vertical-align: top
+	font-size: 17px
 
 // common blocks      
-
-
-
+.out
+	max-width: 1158px
+	margin: 0 auto
+	background: #fff
+.clr
+	+clr	 
+h1, .h1
+	font-size: 32px
+	+light	
+.btn
+	position: relative
+	display: inline-block
+	padding: 0 20px
+	height: 40px
+	line-height: 40px
+	background: $orange
+	color: $dark
+	font-size: 14px
+	+semibold
+	border-bottom: 3px solid #c38222
+	text-decoration: none
+	text-transform: uppercase
+	+transition(transform 200ms, border-width 200ms)   	
+	&:hover
+		+transform(translateY(1px))
+		border-width: 2px
+	&:active
+		+transform(translateY(3px))
+		border-width: 0	
 
 
 
