--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -12,6 +12,9 @@
 	-ms-touch-action: pan-y
 	touch-action: pan-y
 	-webkit-tap-highlight-color: transparent
+	&:hover
+		.slick-prev, .slick-next
+			+transform(translateX(0))
 .slick-list
 	position: relative
 	overflow: hidden
@@ -55,9 +58,24 @@
 	float: left
 	height: 100%
 	min-height: 1px
+	overflow: hidden
 	img
 		display: block
-		max-width: 100%
+		min-width: 100%
+		min-height: 100%
+		+r(767)
+			position: absolute
+			left: 50%
+			+transform(translateX(-50%))
+	.gallery &
+		height: auto 
+		img
+			+r(767)
+				position: relative
+				left: auto
+				width: 100%
+				height: auto  
+				+transform(translateX(0)) 
 	&.slick-loading img
 		display: none
 	display: none
@@ -76,60 +94,63 @@
 .slick-next
 	position: absolute
 	top: 50%
-	margin-top: -14px
+	margin-top: -41px
 	+hide-text
-	height: 50px
-	background: none
+	height: 82px
+	width: 82px
+	border-radius: 50% 
+	background: rgba(#ec9921, 0.6)
+	+tr(transform 300ms)
 	&:focus
 		outline: none
 	&.slick-disabled
 		opacity: 0.2
 	&:before
-		height: 50px
-		line-height: 50px
+		height: 82px
+		line-height: 82px
+		+gpu
+	+r(1024)
+		opacity: 0 	
 .slick-prev
 	left: 0
-	&:before
-		content: "←"
-		display: inline-block
-		vertical-align: middle
-		font-size: 61px
-		color: #fff 
+	margin-left: -41px
+	text-align: right
+	padding-right: 20px
+	+transform(translateX(-41px))
 .slick-next
 	right: 0
-	&:before
-		content: "→"
-		display: inline-block
-		vertical-align: middle
-		font-size: 61px
-		color: #fff 
+	margin-right: -41px
+	text-align: left
+	padding-left: 20px
+	+transform(translateX(41px))
 .slick-dots
 	text-align: center
 	position: absolute
 	margin: 0
-	bottom: 0
-	left: 0
-	right: 0
+	bottom: 47px
+	right: 32px
+	+r(1024)
+		bottom: 25px
+		right: 25px
+	+r(767)
+		right: 50%
+		+transform(translateX(50%))	
 	li
 		position: relative
 		display: inline-block
-		padding: 0 3px 
+		padding: 0 7px 
 		&.slick-active
 			button
-				opacity: 0.3
-				box-shadow: none
+				background: $orange
 		&:before
-			display: none 
-				 
+			display: none
 	button
 		display: block
-		width: 6px
-		height: 6px
+		width: 29px
+		height: 2px
 		background: #fff
-		+box-shadow(0 1px 5px rgba(0,0,0,.25))
 		cursor: pointer
-		+hide-text
-		border-radius: 50% 
+		+hide-text 
 		&:hover
-			box-shadow: none
+			background: $orange
 	
