--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -22,7 +22,7 @@ $orange: #f6ad44
 body
 	+proximanova
 	font-size: 17px 
-	line-height: 1.4
+	line-height: 25px
 	color: $dark
 	background: #eaeaea 
 // mixins
@@ -53,9 +53,18 @@ body
 	background: #fff
 .clr
 	+clr	 
+h1, .h1, h2, .h2, h4, .h4
+	+light	
+	line-height: 1.3
 h1, .h1
 	font-size: 32px
-	+light	
+h2, .h2
+	font-size: 26px
+h3, .h3
+	font-size: 19px
+	+semibold			
+h4, .h4
+	font-size: 18px		
 .btn
 	position: relative
 	display: inline-block
@@ -75,11 +84,61 @@ h1, .h1
 		border-width: 2px
 	&:active
 		+transform(translateY(3px))
-		border-width: 0	
-
-
-
-
+		border-width: 0
+.grid
+	font-size: 0
+	margin-left: -3.3% 
+	+r(767)
+		text-align: center
+	+r(480)
+		margin-left: 0
+	.grid__item
+		display: inline-block
+		vertical-align: top
+		width: 30%
+		margin-left: 3.3%
+		margin-bottom: 30px
+		+r(767)
+			width: 35%
+			margin-bottom: 25px
+		+r(600)
+			width: 45%
+		+r(480)
+			width: 100%
+			margin-left: 0
+			text-align: left
+	.main-wrap &
+		margin-left: -1%
+		.grid__item
+			width: 32.3%
+			margin-left: 1%
+		+r(768)
+			margin-left: -5%
+			.grid__item
+				width: 45%
+				margin-left: 5%
+				margin-bottom: 18px
+		+r(600)
+			margin-left: 0
+			.grid__item
+				width: 100%
+				margin-left: 0 		
+// icons
+[class^="icon-"]
+	display: inline-block
+	vertical-align: middle
+.icon-marker
+	+s(marker)								
+.icon-velcom
+	+s(velcom)
+.icon-mtc
+	+s(mtc)		
+.icon-phone
+	+s(phone)		
+.icon-viber
+	+s(viber)
+.icon-skype
+	+s(skype)
 
 
 
