--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -62,14 +62,14 @@
 	img
 		display: block
 		min-width: 100%
+		min-height: 100%
 		+r(767)
 			position: absolute
 			left: 50%
-			+transform(translateX(-50%))
-	.topper &
-		img
-			min-height: 100%		
+			+transform(translateX(-50%))		
 	.media &
+		img
+			min-height: 1px
 		+r(767)
 			height: auto 
 			img
@@ -96,13 +96,8 @@
 .slick-next
 	position: absolute
 	top: 50%
-	margin-top: -41px
+	margin-top: -27px
 	+hide-text
-	height: 82px
-	width: 82px
-	border-radius: 50% 
-	background: rgba(#ec9921, 0.6)
-	+tr(transform 300ms)
 	&:focus
 		outline: none
 	&.slick-disabled
@@ -114,17 +109,11 @@
 	+r(1024)
 		opacity: 0 	
 .slick-prev
-	left: 0
-	margin-left: -41px
-	text-align: right
-	padding-right: 20px
-	+transform(translateX(-41px))
+	left: 12px
+	+s(prev)
 .slick-next
-	right: 0
-	margin-right: -41px
-	text-align: left
-	padding-left: 20px
-	+transform(translateX(41px))
+	right: 12px
+	+s(next)
 .slick-dots
 	text-align: center
 	position: absolute
