--- a/css/screen.css
+++ b/css/screen.css
@@ -51,7 +51,7 @@ body { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal
 
 h1, .h1, h2, .h2, h4, .h4 { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; line-height: 1.3; }
 
-h1, .h1 { font-size: 32px; }
+h1, .h1 { font-size: 32px; margin-bottom: 25px; }
 
 h2, .h2 { font-size: 26px; margin-bottom: 30px; }
 
@@ -79,17 +79,29 @@ h4, .h4 { font-size: 18px; }
 
 [class^="icon-"] { display: inline-block; vertical-align: middle; }
 
-.icon-marker { background: url('../img/icons-sc40cc11a39.png') 0 -70px no-repeat; width: 13px; height: 21px; }
+.icon-marker { background: url('../img/icons-sd17ac31eb1.png') 0 -616px no-repeat; width: 13px; height: 21px; }
 
-.icon-velcom { background: url('../img/icons-sc40cc11a39.png') 0 -351px no-repeat; width: 29px; height: 22px; }
+.icon-velcom { background: url('../img/icons-sd17ac31eb1.png') 0 -897px no-repeat; width: 29px; height: 22px; }
 
-.icon-mtc { background: url('../img/icons-sc40cc11a39.png') 0 -101px no-repeat; width: 24px; height: 24px; }
+.icon-mtc { background: url('../img/icons-sd17ac31eb1.png') 0 -647px no-repeat; width: 24px; height: 24px; }
 
-.icon-phone { background: url('../img/icons-sc40cc11a39.png') 0 -200px no-repeat; width: 21px; height: 21px; }
+.icon-phone { background: url('../img/icons-sd17ac31eb1.png') 0 -746px no-repeat; width: 21px; height: 21px; }
 
-.icon-viber { background: url('../img/icons-sc40cc11a39.png') 0 -383px no-repeat; width: 48px; height: 23px; }
+.icon-viber { background: url('../img/icons-sd17ac31eb1.png') 0 -929px no-repeat; width: 48px; height: 23px; }
 
-.icon-skype { background: url('../img/icons-sc40cc11a39.png') 0 -317px no-repeat; width: 24px; height: 24px; }
+.icon-skype { background: url('../img/icons-sd17ac31eb1.png') 0 -863px no-repeat; width: 24px; height: 24px; }
+
+.icon-adv-marker { background: url('../img/icons-sd17ac31eb1.png') 0 -182px no-repeat; width: 81px; height: 81px; }
+
+.icon-adv-indiv { background: url('../img/icons-sd17ac31eb1.png') 0 -91px no-repeat; width: 81px; height: 81px; }
+
+.icon-adv-safe { background: url('../img/icons-sd17ac31eb1.png') 0 -364px no-repeat; width: 81px; height: 81px; }
+
+.icon-adv-exp { background: url('../img/icons-sd17ac31eb1.png') 0 0 no-repeat; width: 81px; height: 81px; }
+
+.icon-adv-teeth { background: url('../img/icons-sd17ac31eb1.png') 0 -455px no-repeat; width: 81px; height: 81px; }
+
+.icon-adv-money { background: url('../img/icons-sd17ac31eb1.png') 0 -273px no-repeat; width: 81px; height: 81px; }
 
 .l { *zoom: 1; }
 .l:after { content: " "; display: table; clear: both; }
@@ -195,7 +207,7 @@ h4, .h4 { font-size: 18px; }
 .m-comm .m-comm__item { font-size: 17px; color: #222; }
 @media only screen and (max-width: 600px) { .m-comm .m-comm__item { padding-bottom: 35px; } }
 .m-comm .m-comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; }
-.m-comm .m-comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-sc40cc11a39.png') 0 -296px no-repeat; width: 17px; height: 11px; }
+.m-comm .m-comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-sd17ac31eb1.png') 0 -842px no-repeat; width: 17px; height: 11px; }
 
 .footer .footer__in { max-width: 1158px; margin: 0 auto; background: #7d9601; text-align: center; padding: 35px 25px 10px; }
 .footer .footer__adress { margin-bottom: 20px; }
@@ -218,7 +230,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .hamburger { right: 10px; top: 16px; } }
 
 .mob-menu { position: absolute; left: 0; right: 0; top: 0; padding-bottom: 105px; padding-top: 70px; background: #b3cb3b; text-align: center; z-index: 99; }
-.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-sc40cc11a39.png') 0 0 no-repeat; width: 30px; height: 30px; }
+.mob-menu .mob-menu__close { position: absolute; top: 36px; right: 36px; background: url('../img/icons-sd17ac31eb1.png') 0 -546px no-repeat; width: 30px; height: 30px; }
 .mob-menu .mob-menu__list { margin-bottom: 60px; }
 .mob-menu .mob-menu__list li { margin-bottom: 30px; }
 .mob-menu .mob-menu__list li a { font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; text-transform: uppercase; color: #222; }
@@ -230,6 +242,7 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 767px) { .sidebar { width: 100%; float: none; } }
 
 .content { overflow: hidden; }
+.content p { margin-bottom: 20px; }
 @media only screen and (max-width: 767px) { .content { width: 100%; overflow: visible; } }
 
 .article { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; margin-bottom: 45px; }
@@ -237,7 +250,6 @@ h4, .h4 { font-size: 18px; }
 .article h2 { margin: 40px 0 25px; }
 .article img { display: block; width: 100%; }
 .article img[align="left"] { display: block; width: 50%; margin: 0 30px 18px 0; }
-.article p { margin-bottom: 20px; }
 .article a { color: #7e960d; }
 .article a:hover { text-decoration: none; }
 .article ul { margin-bottom: 40px; text-align: left; }
@@ -245,6 +257,28 @@ h4, .h4 { font-size: 18px; }
 .article ul li:before { content: ""; position: absolute; top: 13px; left: 0; width: 36px; height: 1px; background: #7e960d; }
 
 .gallery { margin-bottom: 30px; }
+
+@media only screen and (max-width: 767px) { .adv { padding: 0 8px; } }
+.adv .adv__list { font-size: 0; }
+.adv .adv__item { display: inline-block; vertical-align: top; *zoom: 1; width: 50%; margin-bottom: 30px; }
+.adv .adv__item:after { content: " "; display: table; clear: both; }
+@media only screen and (max-width: 900px) { .adv .adv__item { width: 100%; } }
+@media only screen and (max-width: 767px) { .adv .adv__item { margin-bottom: 10px; } }
+.adv .adv__icon { width: 81px; float: left; margin-right: 7%; }
+.adv .adv__text { overflow: hidden; padding-right: 7%; }
+.adv .adv__text p { font-size: 15px; color: #222; text-align: left; }
+@media only screen and (max-width: 767px) { .adv .adv__text .h3 { margin-bottom: 8px; }
+  .adv .adv__text p { margin-bottom: 0; } }
+
+.history > p { margin-bottom: 34px; }
+.history .h1 { margin-bottom: 31px; }
+.history .history__list { font-size: 0; }
+.history .history__list .history__item { display: inline-block; vertical-align: top; width: 50%; margin-bottom: 30px; padding-right: 7%; }
+.history .history__list .history__item .h3 { line-height: 1.4; margin-bottom: 13px; }
+.history .history__list .history__item p { margin-bottom: 0; font-size: 15px; color: #222; }
+@media only screen and (max-width: 900px) { .history .history__list .history__item { width: 100%; padding-right: 0; } }
+.history .history__list .history__year { position: relative; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 36px; padding-bottom: 27px; margin-bottom: 17px; }
+.history .history__list .history__year:after { content: ""; position: absolute; bottom: 0; left: 0; width: 82px; height: 4px; background: #bed746; }
 
 .slick-slider { position: relative; display: block; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
 .slick-slider:hover .slick-prev, .slick-slider:hover .slick-next { -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
@@ -279,9 +313,9 @@ h4, .h4 { font-size: 18px; }
 .slick-prev:before, .slick-next:before { height: 82px; line-height: 82px; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 @media only screen and (max-width: 1024px) { .slick-prev, .slick-next { opacity: 0; } }
 
-.slick-prev { left: 12px; background: url('../img/icons-sc40cc11a39.png') 0 -231px no-repeat; width: 26px; height: 55px; }
+.slick-prev { left: 12px; background: url('../img/icons-sd17ac31eb1.png') 0 -777px no-repeat; width: 26px; height: 55px; }
 
-.slick-next { right: 12px; background: url('../img/icons-sc40cc11a39.png') 0 -135px no-repeat; width: 26px; height: 55px; }
+.slick-next { right: 12px; background: url('../img/icons-sd17ac31eb1.png') 0 -681px no-repeat; width: 26px; height: 55px; }
 
 .slick-dots { text-align: center; position: absolute; margin: 0; bottom: 47px; right: 32px; }
 .slick-dots li { position: relative; display: inline-block; padding: 0 7px; }
