--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -110,6 +110,7 @@ h1, .h1, h2, .h2, h4, .h4
 	line-height: 1.3
 h1, .h1
 	font-size: 32px
+	margin-bottom: 25px
 h2, .h2
 	font-size: 26px
 	margin-bottom: 30px
@@ -192,6 +193,18 @@ h4, .h4
 	+s(viber)
 .icon-skype
 	+s(skype)
+.icon-adv-marker
+	+s(adv-marker)
+.icon-adv-indiv
+	+s(adv-indiv)
+.icon-adv-safe
+	+s(adv-safe)
+.icon-adv-exp
+	+s(adv-exp)
+.icon-adv-teeth
+	+s(adv-teeth)
+.icon-adv-money
+	+s(adv-money)						
 
 
 
