--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -73,7 +73,7 @@ body
 	background: #fff
 	padding: 0 25px
 	+r(767)
-		padding: 0 10px 	
+		padding: 0 	
 .clr
 	+clr	 
 .breadcrumbs
@@ -139,6 +139,9 @@ h4, .h4
 	&:active
 		+transform(translateY(3px))
 		border-width: 0
+	&.btn_green
+		background: #b3cb3b
+		border-color: #7e960d 	
 .grid
 	font-size: 0
 	margin-left: -3.3% 
