--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -376,7 +376,8 @@
 		margin-left: 25px
 	+r(767)
 		width: 100%
-		float: none 	
+		float: none
+		margin-left: 0 	
 .content
 	overflow: hidden
 	p
@@ -384,6 +385,7 @@
 	+r(767)
 		width: 100%
 		overflow: visible
+		padding: 0 10px 
 .article	
 	+light	
 	margin-bottom: 45px
@@ -487,4 +489,135 @@
 				left: 0
 				width: 82px
 				height: 4px
-				background: #bed746				
+				background: #bed746
+// form				
+.form
+	&.form_half
+		max-width: 500px
+	.form__row
+		position: relative
+		margin-bottom: 10px
+		padding-bottom: 25px 
+		text-align: left
+		&:before
+			content: "*"
+			position: absolute
+			top: 16px
+			left: 0
+			+semibold
+			font-size: 19px
+			color: #e38600
+			z-index: 2
+			display: none
+		& > p
+			margin-bottom: 15px
+			+semibold
+			font-size: 19px 	
+		&.require
+			&:before
+				display: block
+	.form__submit
+		text-align: center				
+.input, .textarea
+	display: block
+	text-align: left
+	input, textarea
+		width: 100% 
+		height: 55px
+		padding: 0 16px
+		border-bottom: 2px solid #cecece
+		border-width: 0 0 2px 0
+		+semibold
+		font-size: 19px
+		color: $dark
+		+tr(border-color 300ms)
+		+placeholder
+			+proximanova
+			font-size: 19px
+			color: #a6ad9f
+		&:focus
+			border-color: #2d5a23
+			+placeholder
+				font-size: 0
+	.error__alert
+		display: none
+		position: absolute
+		bottom: 0
+		left: 0		
+		padding-top: 3px
+		font-size: 13px
+		color: #ff0000 		
+	&.has-error
+		input
+			border-color: #ff0000
+		.error__alert
+			display: block
+.textarea
+	position: relative
+	&:after
+		content: ""
+		position: absolute
+		bottom: 10px
+		right: 0
+		+arr(13, 9, #cecece, br)
+		pointer-events: none
+		+tr(border-color 300ms)
+	&.is-focused
+		&:after
+			+arr(13, 9, #2d5a23, br)	 
+	textarea
+		height: 60px
+		padding: 16px 
+		max-width: 100%
+		min-width: 100%
+		max-height: 200px
+.radio-wrap
+	+clr
+	text-align: left
+	.radio
+		float: right
+		width: 200px
+		&:first-child
+			float: left
+		+r(600)
+			width: 45% 	 		
+.radio
+	position: relative
+	display: block
+	margin-bottom: 5px
+	input
+		position: absolute
+		opacity: 0
+	input + div
+		position: relative
+		padding-left: 32px
+		&:before
+			content: ""
+			position: absolute
+			top: 0
+			left: 0
+			width: 17px
+			height: 17px
+			border-radius: 50%
+			border: 1px solid #cecece 
+		span
+			display: block
+			margin-bottom: 5px 
+			font-size: 15px
+			color: $dark
+		p
+			font-size: 13px
+			color: #c5c5c5
+			line-height: 1.6
+	input:checked + div
+		&:before
+			border-color: #fbb959
+		&:after
+			content: ""
+			position: absolute
+			top: 6px
+			left: 6px
+			width: 5px
+			height: 5px
+			border-radius: 50%
+			background: #000								
